<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblMail" />

        <EditText
            android:id="@+id/edtMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textWebEmailAddress" />

        <TextView
            android:id="@+id/tvCuit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblCuit" />

        <EditText
            android:id="@+id/edtCuit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/tvMoneda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblMoneda"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="26dp" />

        <RadioGroup
            android:id="@+id/optMoneda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/optPesos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rbtnPeso" />

            <RadioButton
                android:id="@+id/optDolar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rbtnDolar" />

        </RadioGroup>

        <TextView
            android:id="@+id/tvMonto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblMontoInv" />

        <EditText
            android:id="@+id/edtMonto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/tvDias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblDias" />

        <SeekBar
            android:id="@+id/seekDias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvDiasSeleccionados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvIntereses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAvisarVencimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblAvisarMail" />

            <Switch
                android:id="@+id/swAvisarVencimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ToggleButton
            android:id="@+id/togAccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/btnAcreditarCuentaOFF"
            android:textOn="@string/btnAcreditarCuentaON" />

        <CheckBox
            android:id="@+id/chkAceptoTerminos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chkTerminos" />

        <Button
            android:id="@+id/btnHacerPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPlazoFijo" />

        <TextView
            android:id="@+id/edtMensajes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="6" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>